fixed proper spacing between profile photo and added bullet wording

--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -25,7 +25,7 @@
 
 		body.is-preload #header .content .inner {
 			max-height: none;
-			padding: 3rem 2rem;
+			padding: 4rem 3rem;
 			opacity: 1;
 		}
 
